...
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:onClick="openSecondActivity"
        android:text="@string/sign_up" />
...
